--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
+    "node-sass": "^4.13.1",
+    "open-color": "^1.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
